# sudoku-solver

./: .gitignore  plan.md  process.md  readme.md
.github/workflows/: blank.yml
sudoku-lamda-function/: Cargo.toml  readme.md
sudoku-lamda-function/src/: img-solver.rs  main.rs
sudoku-solver/: Cargo.toml  temp.txt
sudoku-solver/src/: lib.rs  main.rs
sudoku-ui/: index.html  package-lock.json  package.json  vite.config.js
sudoku-ui/src/: About.jsx  CameraCapture.jsx  SudokuContext.jsx  app.css  app.jsx  index.css
sudoku-ui/src/panels/: About.css  About.jsx  CameraCapture.jsx  Sudoku.jsx  index.jsx
