[package]
name = "sudoku-lamda-function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.7.3"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
tokio = "1.26.0"
lambda_http = "0.7.3"


[[bin]]
name = "bootstrap"
path = "src/main.rs"
