[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
aws-config = "0.54.1"
aws-sdk-rekognition = "0.24.0"
base64 = "0.21.0"
dlx-rs = "0.0.3"
image = "0.24.5"
image-base64 = "0.1.0"
tokio = { version = "1.26.0", features = [ "full" ] }
wasm-bindgen = "0.2.84"

